Changes in 0.61.6:
  * InitialContents turns off EtcConfig, since a file cannot be both
    a config file and an InitialContents file.

Changes in 0.61.5:
  * Added basic clone capability (which only works cloning to parents
    branches and shadows, and on a single host).
  * Now handles degenerate case of packaging unreadable files.
  * A bug that caused conary to ask for the wrong fileId when constructing
    a changeset from multiple repositores has been fixed.
  * Conary now can add users and groups automatically at install time.  If
    there is no taghandler to add a user or a group, conary will add it
    internally as a bootstrapping measure; if there is a taghandler,
    conary will call that instead.  In order to ease transition, Conary
    does not yet create the dependencies on the info- packages; a future
    version of Conary will add those dependencies after the system user
    info- packages have been created.
  * rpm2cpio now handles rpm archives that use bzip2 to compress the
    cpio payload
  * Conary now creates dependencies (provides and requires) for CIL
    files, if mono's monodis is installed on the system or being built
    in the current package.
  * Troves moving between troves could cause conary to attempt double
    erasures
  * The networked repository handles cases where contents are not
    found in the contents store.  The exception is passed back to
    the client.
  * The networked repository handles cases where a file stream is not
    found when the client asks for file contents.  The exception is
    passwd back to the client.
  * An error that caused getPackageBranchPathIds() to return the
    oldest fileIds instead of the youngest fileIds has been corrected.
  * Reworked finding old versions of troves to avoid a single trove
    being removed multiple times

Changes in 0.61.4:
  * %(datadir)s/.../lib/ files will no longer show up in :lib - presumption
    being that anything under %(datadir)s really is arch independenct