@@ -1,6 +1,8 @@
 Changes in 0.61.6:
   * InitialContents turns off EtcConfig, since a file cannot be both
     a config file and an InitialContents file.
+  * Reworked repository change sets to directly reference files from the
+    contents store
 
 Changes in 0.61.5:
   * Added basic clone capability (which only works cloning to parents
